# casitas

./: README.md  index.html  tests.py
data-engineer-pisos/: .env.example  .gitignore  Makefile  README.md  pyproject.toml
data-engineer-pisos/config/: sources.toml
data-engineer-pisos/docs/: index.html
data-engineer-pisos/notebooks/: analysis.ipynb
data-engineer-pisos/scripts/: export_html.py
data-engineer-pisos/sql/: analysis.sql
data-engineer-pisos/src/: cli.py  config.py
data-engineer-pisos/src/extractors/: __init__.py  base.py  idealista.py  ine.py  serpavi.py
data-engineer-pisos/src/loaders/: __init__.py  duckdb_loader.py
data-engineer-pisos/src/transformers/: __init__.py  idealista.py  ine.py  serpavi.py
data-engineer-pisos/tests/: test_transformers.py
