[project]
name = "pisos-etl"
version = "0.1.0"
description = "ETL pipeline for Spanish real estate data"
requires-python = ">=3.11"
dependencies = [
    "httpx>=0.27",
    "duckdb>=1.1",
    "pandas>=2.2",
    "polars>=1.0",
    "openpyxl>=3.1",
    "pydantic>=2.9",
    "pydantic-settings>=2.6",
    "python-dotenv>=1.0",
    "typer>=0.12",
    "rich>=13.9",
    "tenacity>=9.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3",
    "ruff>=0.7",
    "ipykernel>=6.29",
    "jupyter>=1.1",
    "plotly>=5.24",
    "matplotlib>=3.9",
]

[project.scripts]
pisos = "src.cli:app"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.pytest.ini_options]
testpaths = ["tests"]
